fix: small layout bugs

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,8 @@
 .single-post-image {
-  height: 100%;
+  min-height: 100%;
+  min-width: 100%;
+  max-height: 150%;
+  max-width: 150%;
 }
 
 *:focus {
